# cdof

./: .clang-format  .gitignore  LICENSE  Makefile  README.md  application.c  main.c  makefile  setup.py
add_instr/: README.md  add_instr.sh  pyproject.toml
add_instr/cdof/: notes.md  simple_rewrite.py
docs/: logging.md  planning.md
docs/final_report/: Makefile  article_4.tex  gemm_workload_profile_example.md  report.md  tmp.md
docs/final_report/_build/: article_4.aux  article_4.blg  article_4.fdb_latexmk  article_4.fls
docs/idea-3-dynamic-optimizer/: README.md  notes.md  notes2.md  planning.md  proposal.md
include/: sample.h
source_to_asm/: README.md  driver.py  parse_annoted.py
src/: application.c  cdof.py  driver.py  main.c  main_test.c  parse_annotated.py  parse_annoted.py  test.c  test2.c
tests/: Makefile  average.py  data.csv  gemv_test.c  gemv_test.owith_prefetch  gemv_test.s  gemv_test.swith_prefetch.s  gemv_test_experiments.csv  graph.py  main.c  memchase_test_experiments.csv  mtrans_test.c  test_run.txt
tests/benchmark_scripts/: memchase_test.c  readme.md
tests/experiment_csv/: gemv_test.csv  gemv_test_experiments.csv  mtrans_test_experiments.csv  readme.md
tests/memchase_test_measurements/: memchase_test_avg_llc_missrate_results.csv  memchase_test_avg_miss_rate_results.csv  memchase_test_max_miss_rate_results.csv  memchase_test_time_results.csv
tests/results/: readme.md
tests/workload_profiles/: gemv_test_runs.txt  memchase_test_runs.txt  mtrans_test_runs.txt  readme.md
(+11 files in other folders)
