[project]
name = "cdof-py"
version = "0.0.1"
dependencies = [
    "setuptools",
    "gtirb_rewriting"
]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.entry-points.gtirb_rewriting]
nop-pass = "cdof.simple_rewrite:NopPass"
prefetch-pass = "cdof.simple_rewrite:PrefetchPass"
